[tool.poetry]
name = "usa_again"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
alembic = "^1.7.5"
ormar = {extras = ["postgres"], version = "^0.10.23"}
pydantic = {version = "1.8.2", extras = ["email", "dotenv"]}
celery = "^5.2.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
emails = "^0.6"
python-multipart = "^0.0.5"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
